--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4416,7 +4416,7 @@
         url,
         attemptCount = 0
       ) {
-        const MAX_ATTEMPTS = 120; // Maximum 2 minutes of polling with exponential backoff
+        const MAX_ATTEMPTS = 60; // Maximum 3 minutes of polling with 3000ms interval
 
         // Safety check: stop polling after too many attempts
         if (attemptCount >= MAX_ATTEMPTS) {
@@ -4620,12 +4620,9 @@
                         `;
             }
 
-            // Use exponential backoff: start at 1s, max 5s
-            const pollInterval = Math.min(1000 + attemptCount * 100, 5000);
+            // Use 3000ms polling interval
             console.log(
-              `🔄 Polling again in ${pollInterval}ms (attempt ${
-                attemptCount + 1
-              })`
+              `🔄 Polling again in 3000ms (attempt ${attemptCount + 1})`
             );
 
             // Keep polling with incremented attempt count
@@ -4638,18 +4635,13 @@
                   url,
                   attemptCount + 1
                 ),
-              pollInterval
+              3000
             );
-          } else {
-            // Keep polling for other statuses (preparing, queued, etc.) with incremented attempt count
+          } else if (data.status === "not_found") {
+            // Download not yet initialized, retry without incrementing attempt count for first few tries
             console.log(
-              `🔄 Status '${data.status}' - polling again (attempt ${
-                attemptCount + 1
-              })`
+              `🔄 Status 'not_found' - backend still initializing, retrying...`
             );
-
-            // Use exponential backoff for unknown states too
-            const pollInterval = Math.min(1000 + attemptCount * 100, 5000);
 
             setTimeout(
               () =>
@@ -4660,7 +4652,26 @@
                   url,
                   attemptCount + 1
                 ),
-              pollInterval
+              3000
+            );
+          } else {
+            // Keep polling for other statuses (preparing, queued, etc.) with incremented attempt count
+            console.log(
+              `🔄 Status '${data.status}' - polling again (attempt ${
+                attemptCount + 1
+              })`
+            );
+
+            setTimeout(
+              () =>
+                pollDownloadStatus(
+                  downloadId,
+                  button,
+                  title,
+                  url,
+                  attemptCount + 1
+                ),
+              3000
             );
           }
         } catch (error) {
